# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/spire",
    "./crates/spire-*",
    "./examples/*",
]

default-members = [
    "./crates/spire",
    "./crates/spire-*",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
readme = "./README.md"
license = "MIT"

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/spire-rs/spire"
homepage = "https://github.com/spire-rs/spire"
documentation = "https://docs.rs/spire"

[workspace.dependencies]
# Workspace crates
spire = { path = "./crates/spire", version = "0.2.0" }
spire-core = { path = "./crates/spire-core", version = "0.2.0" }
spire-macros = { path = "./crates/spire-macros", version = "0.2.0" }
spire-reqwest = { path = "./crates/spire-reqwest", version = "0.2.0" }
spire-thirtyfour = { path = "./crates/spire-thirtyfour", version = "0.2.0" }

# Async runtime
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7" }
futures = { version = "0.3" }
async-trait = { version = "0.1" }

# Tower ecosystem
tower = { version = "0.4", features = ["util"] }

# HTTP
http = { version = "1.1" }
http-body = { version = "1.0" }
http-body-util = { version = "0.1" }

# Utilities
bytes = { version = "1.7" }
pin-project-lite = { version = "0.2" }
thiserror = { version = "1.0" }
derive_more = { version = "0.99" }

# Serialization
serde = { version = "1.0" }
serde_json = { version = "1.0" }

# HTTP clients
reqwest = { version = "0.12" }

# Browser automation
thirtyfour = { version = "0.32" }
deadpool = { version = "0.12" }

# HTML parsing
scraper = { version = "0.19" }

# Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-test = { version = "0.2" }

# Time handling
jiff = { version = "0.1" }

# Proc macros
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }
