# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = """
Core types and traits for Spire.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = []
full = ["client", "driver", "tracing"]
tracing = ["trace", "dep:tracing"]
trace = ["dep:tracing"]

client = ["dep:hyper", "dep:hyper-util"]
driver = ["dep:fantoccini", "dep:deadpool"]

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
tower = { workspace = true, features = ["util"] }
async-trait = { workspace = true }

http = { version = "1.1.0" }
http-body = { version = "1.0.0" }
http-body-util = { version = "0.1.1" }
thiserror = { version = "1.0.61" }

hyper = { version = "1.3.1", optional = true, features = ["client"] }
hyper-util = { version = "0.1.5", optional = true, features = ["service"] }
fantoccini = { version = "0.20.0-rc.7", optional = true }
deadpool = { version = "0.12.1", optional = true, features = [] }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "test-util"] }
tracing-test = { version = "0.2.5", features = [] }
reqwest = { version = "0.12.4", features = [] }
