# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = """
Core types and traits for Spire.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = []
full = ["client", "driver", "tracing"]
tracing = ["trace", "dep:tracing"]

metric = ["tower/load"]
trace = ["dep:tracing"]

client = ["dep:hyper", "dep:hyper-util"]
driver = ["dep:fantoccini", "dep:deadpool"]

[dependencies]
tower = { version = "0.4", features = ["util"] }
bytes = { version = "1.7" }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
pin-project-lite = { version = "0.2" }

http = { version = "1.1" }
http-body = { version = "1.0" }
http-body-util = { version = "0.1" }
thiserror = { version = "1.0" }

hyper = { version = "1.4", optional = true, features = ["client"] }
hyper-util = { version = "0.1", optional = true, features = ["service"] }
fantoccini = { version = "0.21", optional = true }
deadpool = { version = "0.12", optional = true, features = [] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tracing-test = { version = "0.2", features = [] }
reqwest = { version = "0.12", features = [] }
