# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire-driver"

version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["webdriver", "browser", "automation"]
description = """
Web driver process automation.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = [
    "stdio-null",
]
full = [
    "chromedriver",
    "geckodriver",
    "msedgedriver",
    "safaridriver",
]

stdio-null = []
fantoccini = []

chromedriver = []
geckodriver = []
msedgedriver = []
safaridriver = []

[dependencies]
tokio = { version = "1.35.1", default-features = false, features = ["process", "sync"] }
async-trait = { version = "0.1.77", default-features = false }
thiserror = { version = "1.0.56", default-features = false }

[dev-dependencies]
tokio = { version = "1.35.1", default-features = false, features = ["rt", "macros"] }
