[package]
name = "spire-fantoccini"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

description = "Fantoccini-based browser automation backend for Spire web scraping framework"
keywords = ["crawler", "scraper", "browser", "webdriver"]
categories = ["asynchronous", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

[dependencies]
# Spire
spire-core = { workspace = true }

# Tower ecosystem
tower = { workspace = true }

# Async
futures = { workspace = true }
async-trait = { workspace = true }

# Browser automation
fantoccini = { workspace = true }
deadpool = { workspace = true }

# HTTP
http = { workspace = true }
http-body-util = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
# Testing
tokio = { workspace = true }
