# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire-macros"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = """
Macros for Spire.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
# spire-core = { workspace = true, features = [] }
proc-macro2 = { version = "1.0", features = [] }
syn = { version = "2.0", features = [] }
quote = { version = "1.0", features = [] }
