# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire"

version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = """
The flexible scraper framework powered by tokio and tower.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = []
full = ["client", "driver", "macros", "tracing"]
tracing = ["dep:tracing", "spire-core/tracing"]
macros = ["dep:spire-macros"]

trace = []
exclude = []
include = []

client = ["spire-core/client", "dep:scraper"]
driver = ["spire-core/driver"]

[dependencies]
spire-core = { workspace = true }
spire-macros = { workspace = true, optional = true }

bytes = { workspace = true }
futures = { workspace = true }
tower = { workspace = true, features = ["util"] }
async-trait = { workspace = true }

#robotxt = { version = "0.6.1", optional = true, features = [] }
#sitemapo = { version = "0.2.0", optional = true, features = [] }

pin-project-lite = { version = "0.2.14" }
serde = { version = "1.0.203" }
serde_json = { version = "1.0.117" }
scraper = { version = "0.19.0", optional = true }
tracing = { version = "0.1.40", optional = true }
