# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire"

version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = """
The flexible scraper framework powered by tokio and tower.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = []
full = ["client", "driver", "macros", "tracing"]
tracing = ["dep:tracing", "spire-core/tracing"]
macros = ["dep:spire-macros"]

metric = ["spire-core/metric"]
trace = ["spire-core/trace"]
exclude = []
include = []

client = ["spire-core/client", "dep:scraper"]
driver = ["spire-core/driver"]

[dependencies]
spire-core = { workspace = true }
spire-macros = { workspace = true, optional = true }

tower = { version = "0.5", features = ["util"] }
bytes = { version = "1.6" }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
pin-project-lite = { version = "0.2" }

#robotxt = { version = "0.6", optional = true, features = [] }
#sitemapo = { version = "0.2", optional = true, features = [] }

serde = { version = "1.0" }
serde_json = { version = "1.0" }
scraper = { version = "0.19", optional = true }
tracing = { version = "0.1", optional = true }
