# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tower-scrap"

version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license =  { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "tower"]
description = """
Tower middlewares, adapters and utilities useful for web scraping.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = []
full = []

[dependencies]