# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "binding-ts"

version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
path = "./lib.rs"

[dependencies]
spire-core = { workspace = true }
