# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = "Core types and traits for Spire web scraping framework"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

[features]
default = []
full = ["tracing", "metric"]

# Observability
tracing = ["dep:tracing"]
metric = ["tower/load"]


[dependencies]
# Tower ecosystem
tower = { workspace = true }

# Async
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# HTTP
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }

# Utilities
bytes = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }

# Optional: Observability
tracing = { workspace = true, optional = true }

[dev-dependencies]
# Testing
tokio = { workspace = true }
tracing-test = { workspace = true }
