# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = "Core types and traits for Spire web scraping framework"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["tracing", "metric"]

# Observability
tracing = ["dep:tracing"]
metric = ["tower/load"]

[dependencies]
# Tower ecosystem
tower = { workspace = true, features = [] }

# Async
futures = { workspace = true, features = [] }
async-trait = { workspace = true, features = [] }
tokio = { workspace = true, features = [] }
tokio-util = { workspace = true, features = [] }

# HTTP
http = { workspace = true, features = [] }
http-body = { workspace = true, features = [] }
http-body-util = { workspace = true, features = [] }

# Utilities
bytes = { workspace = true, features = [] }
pin-project-lite = { workspace = true, features = [] }
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = [] }

# Optional: Observability
tracing = { workspace = true, optional = true, features = [] }

[dev-dependencies]
# Testing
tokio = { workspace = true, features = [] }
tracing-test = { workspace = true, features = [] }
