[package]
name = "spire-reqwest"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

description = "Reqwest-based HTTP client backend for Spire web scraping framework"
keywords = ["crawler", "scraper", "web", "reqwest"]
categories = ["asynchronous", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

[dependencies]
# Spire
spire-core = { workspace = true }

# Tower ecosystem
tower = { workspace = true }

# Async
futures = { workspace = true }

# HTTP
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
# Testing
tokio = { workspace = true }
