[package]
name = "spire-thirtyfour"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

description = "Thirtyfour-based browser automation backend for Spire web scraping framework"
keywords = ["crawler", "scraper", "browser", "webdriver"]
categories = ["asynchronous", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

[dependencies]
# Spire
spire-core = { workspace = true }

# Tower ecosystem
tower = { workspace = true }

# Async
futures = { workspace = true }
async-trait = { workspace = true }

# Browser automation
thirtyfour = { workspace = true }
deadpool = { workspace = true }

# HTTP
http = { workspace = true }
http-body-util = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["time", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
jiff = { version = "0.1", features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Derive macros
derive_builder = "0.20"
derive_more = "0.99"

# Utilities
bytes = { workspace = true }

[dev-dependencies]
# Testing
tokio = { workspace = true }
