# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "spire"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "web", "framework"]
description = "The flexible scraper framework powered by tokio and tower"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-tls"]
full = ["macros", "tracing", "reqwest", "thirtyfour", "rustls-tls"]

# Proc macros
macros = ["dep:spire-macros"]

# Backend implementations
reqwest = ["dep:spire-reqwest"]
thirtyfour = ["dep:spire-thirtyfour"]

# TLS implementations
rustls-tls = ["spire-reqwest?/rustls-tls", "spire-thirtyfour?/rustls-tls"]
native-tls = ["spire-reqwest?/native-tls", "spire-thirtyfour?/native-tls"]

# Observability
tracing = ["dep:tracing", "spire-core/tracing"]
metric = ["spire-core/metric"]

[dependencies]
# Spire
spire-core = { workspace = true, features = [] }
spire-macros = { workspace = true, optional = true, features = [] }
spire-reqwest = { workspace = true, optional = true, features = [] }
spire-thirtyfour = { workspace = true, optional = true, features = [] }

# Tower ecosystem
futures = { workspace = true, features = [] }
tower = { workspace = true, features = ["timeout"] }

# Utilities
bytes = { workspace = true, features = [] }
pin-project-lite = { workspace = true, features = [] }
derive_more = { workspace = true, features = [] }
http-body-util = { workspace = true, features = [] }

# Serialization
serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }


# Observability
tracing = { workspace = true, optional = true, features = [] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
