[package]
name = "basic_usage"
version = "0.1.0"
edition = "2021"
description = "Basic usage example for Spire web scraping framework"

[[bin]]
name = "basic_usage"
path = "main.rs"

[dependencies]
# Main spire crate
spire = { workspace = true, features = ["reqwest", "tracing"] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Tracing
tracing-subscriber = { workspace = true }
