[package]
name = "basic_usage"
version = "0.1.0"
edition = "2021"
description = "Basic usage example for Spire web scraping framework"

[[bin]]
name = "basic_usage"
path = "main.rs"

[dependencies]
# Async runtime and spire framework
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
spire = { workspace = true, features = ["reqwest", "tracing"] }

# Observability
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = [] }

# JSON handling
serde_json = { workspace = true }
