[package]
name = "chrome_webdriver"
version = "0.1.0"
edition = "2021"
description = "Chrome WebDriver automation example for Spire web scraping framework"

[[bin]]
name = "chrome_webdriver"
path = "main.rs"

[dependencies]
# Async runtime and spire framework
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
spire = { workspace = true, features = ["thirtyfour", "tracing"] }

# Observability
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = [] }
