# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "example-http"
version = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "http"
path = "./main.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = [] }
