[package]
name = "tower_layers"
version = "0.1.0"
edition = "2021"
description = "Tower middleware layers example for Spire web scraping framework"

[[bin]]
name = "tower_layers"
path = "main.rs"

[dependencies]
# Main spire crate
spire = { workspace = true, features = ["reqwest", "tracing"] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Tower ecosystem
tower = { workspace = true, features = ["retry", "limit", "timeout", "util", "buffer"] }
tower-http = { workspace = true, features = ["trace"] }

# JSON handling
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
